--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,9 +1,8 @@
-port: "8080"
+port: "8000"
 
 db:
   sslmode: "disable"
   username: "postgres"
-  host: "localhost"
+  host: "db"
   port: "5432"
   dbname: "postgres"
-  password: "admin"
